--- a/iot-gateway.yml
+++ b/iot-gateway.yml
@@ -1,15 +1,16 @@
-#simple ansible playbook to start the appropriate containers on a iot-gateway
-#  I just use docker commands and not the ansible docker utilities to remove 
-#  additional dependencies to the image
+# Simple ansible playbook to start the appropriate containers on a iot-gateway
+#
+# docker commands are used and not the ansible docker utilities to remove
+# additional dependencies to the image
 
-# Host dependencies: 
-#    install ansible, 
-#    create and copy ssh key
-#    run playbook with appropriate parameters
+# Host dependencies:
+#  - install ansible,
+#  - create and copy ssh key
+#  - run playbook with appropriate parameters
 #  ansible-playbook -e "mqttuser= mqttpass= mqtthost= mqttport= gitci= arch=" -i targethost, iot-gateway.yml
 #    where arch = -arm64, -armhf or "" for x86 (i.e. arch=)
 
-#run the mosquitto broker
+# Mosquitto broker
 - hosts: all
   tasks:
   - name: Copy mosquitto config file
@@ -42,7 +43,7 @@
                            "-v /home/linaro/mosquitto.conf:/etc/mosquitto/conf.d/mosquitto.conf "\
                            "--name mosquitto linarotechnologies/mosquitto:latest{{ arch }}"
 
-#run tiny-proxy
+# Tinyproxy
 - hosts: all
   tasks:
   - name: Run tiny-proxy container
@@ -51,7 +52,7 @@
                            "--add-host=gitci.com:{{ gitci }} "\
                            "--name tinyproxy linarotechnologies/tinyproxy:latest{{ arch }}"
 
-#run bt-joiner
+# Bt-Joiner
 - hosts: all
   tasks:
   - name: Run bt-joiner container
