--- a/iot-gateway.yml
+++ b/iot-gateway.yml
@@ -7,8 +7,8 @@
 #  - install ansible,
 #  - create and copy ssh key
 #  - run playbook with appropriate parameters
-#  ansible-playbook -e "mqttuser= mqttpass= mqtthost= mqttport= gitci= arch=" -i targethost, iot-gateway.yml
-#    where arch = -arm64, -armhf or "" for x86 (i.e. arch=)
+#  ansible-playbook -e "mqttuser= mqttpass= mqtthost= mqttport= gitci= tag=" -i targethost, iot-gateway.yml
+#    where tag is the default docker tag (e.g. latest-arm64, latest-armhf or "" for latest)
 
 # Mosquitto broker
 - hosts: all
@@ -41,7 +41,7 @@
     command: sh -c "docker stop mosquitto; docker rm mosquitto; "\
                    "docker run --restart=always -d -t --net=host "\
                            "-v /home/linaro/mosquitto.conf:/etc/mosquitto/conf.d/mosquitto.conf "\
-                           "--name mosquitto linarotechnologies/mosquitto:latest{{ arch }}"
+                           "--name mosquitto linarotechnologies/mosquitto:{{ tag|default('latest') }}"
 
 # Tinyproxy
 - hosts: all
@@ -50,7 +50,7 @@
     command: sh -c "docker stop tinyproxy; docker rm tinyproxy; "\
                    "docker run --restart=always -d -t --net=host "\
                            "--add-host=gitci.com:{{ gitci }} "\
-                           "--name tinyproxy linarotechnologies/tinyproxy:latest{{ arch }}"
+                           "--name tinyproxy linarotechnologies/tinyproxy:{{ tag|default('latest') }}"
 
 # Bt-Joiner
 - hosts: all
@@ -58,5 +58,5 @@
   - name: Run bt-joiner container
     command: sh -c "docker stop bt-joiner; docker rm bt-joiner; "\
                    "docker run --restart=always -d -t --privileged --net=host --tmpfs=/run:rw,mode=755 --tmpfs=/run/lock "\
-                           "--name bt-joiner linarotechnologies/bt-joiner:latest{{ arch }}"
+                           "--name bt-joiner linarotechnologies/bt-joiner:{{ tag|default('latest') }}"
 
