--- a/lava.yml
+++ b/lava.yml
@@ -15,6 +15,7 @@
       mode: 0755
   - name: Run lava container (takes quite a while the first time to download the image)
     command: sh -c "docker stop lava-slave; docker rm lava-slave; "\
+                   "docker pull kernelci/lava-slave-docker-v2-lab-tbaker:{{ tag|default('latest') }} "\
                    "docker run -dit --restart always --privileged --name=lava-slave "\
                            "-e LAVA_MASTER={{ lavamaster }} "\
                            "-p 69:69/udp "\
@@ -23,6 +24,6 @@
                            "-v /dev:/dev "\
                            "-v /home/linaro/ser2net.conf:/etc/ser2net.conf "\
                            "-v /home/linaro/reset-port-pykush.sh:/root/scripts/reset-port-pykush.sh "\
-                           "kernelci/lava-slave-docker-v2-lab-tbaker:latest-aarch64"
+                           "kernelci/lava-slave-docker-v2-lab-tbaker:{{ tag|default('latest') }}"
 
 
