--- a/lava.yml
+++ b/lava.yml
@@ -23,7 +23,7 @@
                            "-h {{ lavaname }} "\
                            "-v /dev:/dev "\
                            "-v /home/linaro/ser2net.conf:/etc/ser2net.conf "\
-                           "--tmpfs=/var/run/ "\
+                           "--tmpfs=/run/ "\
                            "-v /home/linaro/reset-port-pykush.sh:/root/scripts/reset-port-pykush.sh "\
                            "kernelci/lava-slave-docker-v2-lab-tbaker:{{ tag|default('latest') }}"
 
