--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -1,8 +1,8 @@
-log_dest file /var/log/mosquitto/mosquitto.log
+log_dest stdout
 
 connection #connection-name
 address #url:#port
-remote_username #username 
+remote_username #username
 remote_password #password
 try_private false
 start_type automatic
