--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -9,6 +9,11 @@ start_type automatic
 bridge_attempt_unsubscribe false
 notifications false
 connection_messages true
+listener 1883
+
+#enable a anonymous websockets connection
+listener 9001
+protocol websockets
 
 # Device management subscriptions
 topic iotdm-1/type/+/id/# in 1 "" ""
