use a proper check before executing docker cleanup commands
Signed-off-by: Alan Bennett <alan.bennett@linaro.org>

--- a/iot-gateway.yml
+++ b/iot-gateway.yml
@@ -33,8 +33,10 @@
 - hosts: all
   tasks:
   - name: Cleanup for containers for group roll-out
-    command: sh -c "docker stop $(docker ps -aq);"\
-                   "docker rm $(docker ps -aq); echo 'PASS'"
+    command: sh -c "if [ $(docker ps -a -q | head -c1 | wc -c) -ne 0 ]; then "\
+                       "docker stop $(docker ps -aq); "\
+                       "docker rm $(docker ps -aq); "\
+                   "fi"
   tags:
     - cleanall
     - gateway
