Update documentation to reflect the latest tag changes
Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/iot-gateway.yml
+++ b/iot-gateway.yml
@@ -8,7 +8,7 @@
 #  - create and copy ssh key
 #  - run playbook with appropriate parameters
 #    i.e. ansible-playbook -e "mqttuser= mqttpass= mqtthost= mqttport= gitci= tag=" -i targethost, iot-gateway.yml
-#    where tag is the default docker tag (e.g. latest-arm64, latest-armhf or "" for x86-64)
+#    where tag is the default docker tag (e.g. latest)
 
 # There are Ansible tags below for the following gateway personalities
 #
@@ -16,7 +16,8 @@
 #  + minimal mosquitto broker (local mqtt port on 1883, websocket port on 9001)
 #  + tinyproxy (expects gitci.com IP as hawkbit will run on a different system)
 #  + bt-joiner
-#  + freeboard
+#  + NGINX CoAP proxy (expects gitci.com IP as Leshan will run on a different system)
+#  + CF CoAP-HTTP proxy
 # cloud - start containers configured to bridge mqtt data to the cloud
 #  + mosquitto configured for use with cloud service (i.e. Bluemix or Cloudmqtt)
 #  + tinyproxy (expects gitci.com IP as hawkbit will run on a different system)
@@ -26,6 +27,7 @@
 #  + hawkbit (running on gateway device)
 #  + bt-joiner
 #  + freeboard
+#
 # There are also ansible tags for the individual items;
 #   mosquitto-local, mosquitto-cloud, tinyproxy, bt-joiner, freeboard, etc...
 
@@ -100,7 +102,6 @@
     - demo
     - local
 
-
 # Tinyproxy
 - hosts: all
   tasks:
@@ -156,17 +157,14 @@
   tasks:
   - name: create dashboard directory
     file: path=/home/linaro/dashboards state=directory mode=0755
-
   - name: Copy default freeboard dashboard
     template:
       src: dashboards/default.json
       dest: /home/linaro/dashboards/default.json
-
   - name: Copy simple freeboard dashboard
     template:
       src: dashboards/simple.json
       dest: /home/linaro/dashboards/simple.json
-
   - name: Run freeboard container
     command: sh -c "docker stop freeboard; docker rm freeboard; "\
                    "docker pull {{ hub|default('linarotechnologies') }}/freeboard:{{ tag|default('latest') }}; "\
