iot-gateway.yml: freeboard: fix container name
Pull is now using freeboard instead of freeboard-demo, but the final
container image (part of the run command) was still using
freeboard-demo.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/iot-gateway.yml
+++ b/iot-gateway.yml
@@ -172,7 +172,7 @@
                            "-v /home/linaro/dashboards/default.json:/usr/share/nginx/html/default.json "\
                            "-v /home/linaro/dashboards/default.json:/usr/share/nginx/html/dashboard.json "\
                            "-v /home/linaro/dashboards:/usr/share/nginx/html/dashboards "\
-                           "--name freeboard {{ hub|default('linarotechnologies') }}/freeboard-demo:{{ tag|default('latest') }}"
+                           "--name freeboard {{ hub|default('linarotechnologies') }}/freeboard:{{ tag|default('latest') }}"
   tags:
     - freeboard
     - demo
