nginx-lwm2m.conf: also proxy port used by artik
Port is specific to the artik service, so let it enabled by default in
case the client is artik-based.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/nginx-lwm2m.conf
+++ b/nginx-lwm2m.conf
@@ -29,10 +29,10 @@ stream {
         proxy_pass  gitci.com:5684;
     }
 
-#    server {
-#        listen  [::]:5686 udp;
-#        proxy_connect_timeout 10s;
-#        proxy_timeout 5m;
-#        proxy_pass  coaps-api.artik.cloud:5686;
-#    }
+    server {
+        listen  [::]:5686 udp;
+        proxy_connect_timeout 10s;
+        proxy_timeout 5m;
+        proxy_pass  coaps-api.artik.cloud:5686;
+    }
 }
