iot-gateway.yml: add leshan to the local tag
Support both hawkbit and leshan (lwm2m) as part of the local tag.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/iot-gateway.yml
+++ b/iot-gateway.yml
@@ -27,6 +27,7 @@
 #  + hawkbit (running on gateway device)
 #  + bt-joiner
 #  + freeboard
+#  + leshan
 #
 # There are also ansible tags for the individual items;
 #   mosquitto-local, mosquitto-cloud, tinyproxy, bt-joiner, freeboard, etc...
@@ -222,3 +223,4 @@
                            "--name leshan {{ hub|default('linarotechnologies') }}/leshan:{{ tag|default('latest') }}"
   tags:
     - leshan
+    - local
