iot-gateway.yml: add cf-proxy-coap-http to the local tag
Firmware is still delivered via HTTP, which can be any server (e.g.
local network), so it is also required for the complete lwm2m demo.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/iot-gateway.yml
+++ b/iot-gateway.yml
@@ -27,6 +27,7 @@
 #  + hawkbit (running on gateway device)
 #  + bt-joiner
 #  + freeboard
+#  + CF CoAP-HTTP proxy
 #  + leshan
 #
 # There are also ansible tags for the individual items;
@@ -211,6 +212,7 @@
     - cf-proxy-coap-http
     - demo
     - gateway
+    - local
 
 # LWM2M Leshan
 - hosts: all
